--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 lib_deps = knolleary/PubSubClient@^2.8
+
+upload_protocol = espota
+upload_port = 192.168.0.89
+
