--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 lib_deps = knolleary/PubSubClient@^2.8
+monitor_speed = 115200
 
-upload_protocol = espota
-upload_port = 192.168.0.89
+; upload_protocol = espota
+; upload_port = 192.168.0.89
 
