--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,12 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.19.1
 monitor_speed = 115200
+
+build_flags = -DMQTT_MAX_PACKET_SIZE=1024
 
 ; upload_protocol = espota
 ; upload_port = 192.168.0.89
