--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,11 @@ framework = arduino
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.19.1
+	joaolopesf/RemoteDebug@^3.0.5
+	links2004/WebSockets@^2.3.6
 monitor_speed = 115200
-
-build_flags = -DMQTT_MAX_PACKET_SIZE=1024
+build_flags = -DMQTT_MAX_PACKET_SIZE=1024 -DLOGGING=1 -DUSE_LIB_WEBSOCKET=1
+extra_scripts = pre:utils/filter_src.py
 
 ; upload_protocol = espota
 ; upload_port = 192.168.0.89
-
