--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.1
 	joaolopesf/RemoteDebug@^3.0.5
 	links2004/WebSockets@^2.3.6
+	tzapu/WiFiManager@^0.16.0
 monitor_speed = 115200
 build_flags = -DMQTT_MAX_PACKET_SIZE=1024 -DLOGGING=1 -DUSE_LIB_WEBSOCKET=1
 extra_scripts = pre:utils/filter_src.py
